fix zh date align

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -81,3 +81,7 @@
   border: $boder;
   // border-right: $boder;
 }
+
+.date-select{
+  vertical-align: bottom;
+}
